--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
 		  <div class="container">
 		  	 <div class="navbar-header">
-				<img src = "assets/images/circleLogo.png" alt="logo" id="circleLogo">
+				<a href="#home"><img src = "assets/images/circleLogo.png" alt="logo" id="circleLogo"></a>
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls= "navbar">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -48,54 +48,45 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="content">
-				<img id="simons" src="assets/images/simonsLogo.png" alt="simons logo">		
+				<img class="desktop" src="assets/images/simonsLogo.png" alt="simons logo">
+                <img id="circle" class="mobile" src="assets/images/circleLogo.png" alt="circle logo">
+                <img id="name" class="mobile" src="assets/images/simons1.png" alt="simons">		
 			</div>
 		</div>
 	</div>
 	
 </div>
-
+<!-- services -->
 <div class = "container-fluid services" id= "services">
 		<div class= "row">
 			<div class = "content2">
-				<h1 class="text-center">Services</h1>
+				<!-- <h1 class="text-center">Services</h1> -->
 				<div class="row">
 					<div id="serviceColumns">
-					  	<div class="col-sm-3"> 	
+					  	<div class="col-sm-4">
+                            <!-- <h2>Commercial and Residential</h2> --> 	
 					    	<div class="thumbnail">
-					      	<img src="#">
+					      	<img src="assets/images/leaf.png" id="leaf">
 						      	<div class="caption">
-						      		<h4>Commercial</h4>
+                                    <h2>Commercial &amp Residential</h2>
 						    		<ul>
 										<li>Weekly service includes mowing, edging, and trimming</li>
 										<li>Blower clean-up of parking lot, sidewalks and gutters</li>			    			
 										<li>Trash clean-up as needed</li>
 										<li>Sprinklers checked and maintained as needed</li>
+                                        <li>Fertilization, fungicide and pesticide application</li>
+                                        <li>Aeration</li>
 						    		</ul>
 						      	</div>
 					    	</div>
 					  	</div>
 
-					  	<div class="col-sm-3"> 	
+						<div class="col-sm-4"> 	
+                            <!-- <h2>Snow Removal</h2> -->
 					    	<div class="thumbnail">
-					      	<img src="#">
+					      	<img src="assets/images/snowflake.svg" id="snowflake">
 						      	<div class="caption">
-						      		<h4>Residential</h4>
-						      		<ul>
-										<li>Weekly service includes mowing, edging, and trimming</li>
-										<li>Blower clean-up of sidewalks and gutters</li>			    			
-										<li>Trash clean-up as needed</li>
-										<li>Sprinklers checked and maintained as needed</li>
-						    		</ul>
-						      	</div>
-					    	</div>
-					  	</div>
-
-						<div class="col-sm-3"> 	
-					    	<div class="thumbnail">
-					      	<img src="#">
-						      	<div class="caption">
-						      		<h4>Snow Removal</h4>
+                                    <h2>Snow Removal</h2>
 						      		<ul>
 										<li>Parking lot snow removal with truck and plow</li>
 										<li>Driveway and sidewalk clean-up with a snowblower and shovel with a 2 inch minimum</li>
@@ -106,17 +97,17 @@
 					    	</div>
 					  	</div>
 
-					  	<div class="col-sm-3"> 	
+					  	<div class="col-sm-4"> 
+                            <!-- <h2>Other Services</h2> -->	
 					    	<div class="thumbnail">
-					      	<img src="#">
+					      	<img src="assets/images/shovel.svg" id="shovel">
 						      	<div class="caption">
-						      		<h4>Other Services</h4>
+                                    <h2>Other Services</h2>
 						    		<ul>
+                                        <li>Landscape and Water-feature projects</li>
 										<li>Sprinkler system start up and shut down, season permitting</li>
 										<li>Sprinkler valve and timer replacement</li>			    			
-										<li>Fertilization, fungicide and pesticide application</li>
-										<li>Aeration and Landscape Projects</li>
-										<!-- <li>Landscape Projects</li> -->
+										
 										<li>Fall and Spring clean-ups</li>
 						    		</ul>
 						      	</div>
@@ -133,7 +124,7 @@
 <div class="container-fluid services">
     <div id="gallery">
         <!-- Slider -->
-        <h1 class="text-center">Photo Gallery</h1>
+        <h2 class="text-center">Photo Gallery</h2>
         <div class="row">
             <div class="col-sm-6" id="thumbnailContainer">
                 <!-- Bottom switcher of slider -->
@@ -275,10 +266,19 @@
 
     </div>
 </div>
-
+<!-- contact -->
 <div class = "container-fluid contact" id="contact">
-	<h1>this is how you contact me</h1>
+	<h2>Contact Us</h2>
+    <h3>801-558-0604</h3>
+    <h3>email@simons.com</h3>
 </div>
+<hr>
+<!-- footer -->
+<footer>
+    <p>Webpage created by Zoe Dyksman 2018</p>
+    <p>Icons provided by <a href="https://www.flaticon.com" target="_blank">flaticon</a></p>
+    <p>snowflake - Scott de Jonge || shovel - Freepik</p>
+</footer>
 
 <!-- JavaScript -->
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
