media query changes

--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
 					    	<div class="thumbnail">
 					      	<img src="assets/images/leaf.png" id="leaf">
 						      	<div class="caption">
-                                    <h3>Commercial &amp Residential</h3>
+                                    <h3>Landscape Maintenance</h3>
 						    		<ul>
-										<li>Weekly service</li>
-										<li>Blower and trash clean-up</li>			    			
-										<li>Trash clean-up as needed</li>
+                                        <li>Commercial and Residential</li>
+										<li>Weekly Yard Service</li>
+										<li>Trimming and Edging</li>
+                                        <li>Blower and Trash clean-up</li>			    			
                                         <li>Fungicide and Pesticide application</li>
                                         <li>Fertilization and Aeration</li>
+                                        <li>Spring and Fall Clean-Ups</li>
 						    		</ul>
 						      	</div>
 					    	</div>
@@ -89,9 +91,11 @@
 						      	<div class="caption">
                                     <h3>Snow Removal</h3>
 						      		<ul>
-										<li>Parking lot snow removal with truck and plow</li>
-										<li>Driveway and sidewalks</li>
-										<li>Salt and ice melt</li>
+                                        <li>Commercial and Residential</li>
+										<li>Parking Lots</li>
+										<li>Driveways and Sidewalks</li>
+										<li>Salt and Ice Melt Application</li>
+                                        <li>Haul Off</li>
 						    		</ul>
 						      	</div>
 					    	</div>
@@ -103,11 +107,11 @@
 						      	<div class="caption">
                                     <h3>Other Services</h3>
 						    		<ul>
-                                        <li>Hardscapes</li>
+                                        <li>Hardscapes and Rock Work</li>
                                         <li>Water Features</li>
-										<li>Landscapes</li>
-										<li>Sprinkler Services</li>			    			
-										<li>Fall and Spring clean-ups</li>
+										<li>Full Landscapes</li>
+                                        <li>Fire Features</li>
+										<li>Sprinkler Installs and Maintenance</li>			    			
 						    		</ul>
 						      	</div>
 					    	</div>
@@ -127,7 +131,7 @@
                 <a href="landscapes.html" target="_blank">
                 <img src="assets/images/flowerbed.jpg" alt="flowerbed"  id="flowerbedThumbnail">
                     <div class="caption">
-                        <h3>Landscape</h3>
+                        <h3>Landscapes</h3>
                     </div>
                 </a>
             </div>
@@ -135,9 +139,9 @@
         <div class="col-md-3">
             <div class="thumbnail">
                 <a href="hardscapes.html" target="_blank">
-                <img src="assets/images/frontyard2.png" alt="rock retaining wall"  id="hardscapeThumbnail" >
+                <img src="assets/images/flowerbed.jpg" alt="rock retaining wall"  id="hardscapeThumbnail" >
                     <div class="caption">
-                        <h3>Hardscape</h3>
+                        <h3>Hardscapes</h3>
                     </div>
                 </a>
             </div>
@@ -147,7 +151,7 @@
                 <a href="water.html" target="_blank">
                 <img src="assets/images/waterfeature8.jpg" alt="water feature" >
                     <div class="caption">
-                       <h3>Water Feature</h3>
+                       <h3>Water Features</h3>
                     </div>
                 </a>
             </div>
@@ -157,7 +161,7 @@
                 <a href="fire.html" target="_blank">
                 <img src="assets/images/firepit3.jpg" alt="firepit" >
                     <div class="caption">
-                        <h3>Fire Feature</h3>
+                        <h3>Fire Features</h3>
                     </div>
                 </a>
             </div>
