company profile added

--- a/index.html
+++ b/index.html
@@ -55,11 +55,28 @@
 		</div>
 	</div>	
 </div>
-<!-- placeholder -->
-<div>
-    <!-- <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150" id="compPic"></a> -->
-    <img src="assets/images/waterfeature7.jpg" alt= "water feature" id = "compPic">
+<!-- company intro -->
+<div class= "container-fluid about-us" id = "aboutUs">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="content">
+                <img src="assets/images/waterfeature7.jpg" alt= "water feature" id = "compPic">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="content" id="compProfile">
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
+            </div>
+        </div>
+    </div>  
 </div>
+<!-- placeholder -->
+<!-- <div> -->
+    <!-- <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150" id="compPic"></a> -->
+    <!-- <img src="assets/images/waterfeature7.jpg" alt= "water feature" id = "compPic"> -->
+<!-- </div> -->
 <!-- services -->
 <div class = "container-fluid services" id= "services">
 		<div class= "row">
