email link fixed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
             <div class="content" id="compProfile">
                 <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
                 <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
             </div>
         </div>
     </div>  
@@ -192,7 +191,7 @@
 	<h2>Contact Us</h2>
     <h3>Eddy Simons</h3>
     <h3>801-558-0604</h3>
-    <h3>eddy@simonspropertymaintenance.com</h3>
+    <h3><a href="mailto:eddy@simonspropertymaintenance.com">Email Us</a></h3>
 </div>
 <hr>
 <!-- footer -->
