changes to gallery

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         </div>
         <div class="col-md-6">
             <div class="content" id="compProfile">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur praesentium dolorem dicta, non est facilis reiciendis perferendis architecto, nam voluptate, sequi repellendus esse voluptatibus provident aliquam adipisci. Voluptates, ratione, eveniet?</h3>
             </div>
         </div>
     </div>  
