--- a/water.html
+++ b/water.html
@@ -31,10 +31,10 @@
 		    </div>
 		    <div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class = "#"><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-					<li><a href="#contact">Contact Us</a></li>
+					<li class = "#"><a href="index.html">Home</a></li>
+                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="index.html#gallery">Gallery</a></li>
+                    <li><a href="index.html#contact">Contact Us</a></li>
 				</ul>
 		    </div>
 		  </div>
