--- a/hardscapes.html
+++ b/hardscapes.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Hardscapes</title>
 
 	<!-- bootstrap -->
@@ -44,16 +46,12 @@
 <!-- photo gallery -->
 <div class="container-fluid services"> 
     <div id="gallery">
-<!-- Slider -->
         <h2 class="text-center">Hardscape Features Gallery</h2>
         <div class="row">
             <div class="col-sm-6" id="thumbnailContainer">
-                <!-- Bottom switcher of slider -->
                 <ul class="thumbnailList">
                     <li class="col-sm-3">
-                        <a class="thumbnail" id="carousel-selector-0">
-                            <img src="http://placehold.it/150x150&text=zero">
-                        </a>
+                        <a class="thumbnail" id="carousel-selector-0"><img src="http://placehold.it/150x150&text=zero"></a>
                     </li>
 
                     <li class="col-sm-3">
@@ -114,9 +112,9 @@
                     </li>
                 </ul>
             </div> 
+            <!-- Slider -->
             <div class="col-sm-6">
                 <div class="col-xs-12" id="slider">
-                    <!-- Top part of the slider -->
                     <div class="row">
                         <div class="col-sm-12" id="carousel-bounding-box">
                             <div class="carousel slide" id="myCarousel">
