removed contact info

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
 <!-- contact -->
 <div class = "container-fluid contact" id="contact">
 	<h2>Contact Us</h2>
-    <h3>Eddy Simons</h3>
-    <h3>801-558-0604</h3>
-    <h3><a href="mailto:eddy@simonspropertymaintenance.com">Email Us</a></h3>
+    <h3>Business owner</h3>
+    <h3>XXX-XXX-XXXX</h3>
+    <h3><a href="mailto:">Email Us</a></h3>
 </div>
 <hr>
 <!-- footer -->
